--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fancy weather</title>
-  <link rel="shortcut icon" href="http://faviconka.ru/ico/faviconka_ru_1633.ico" type="image/png">
+  <link rel="shortcut icon" href="https://faviconka.ru/ico/faviconka_ru_1633.ico" type="image/png">
   <link rel="stylesheet" href="https://use.fontawesome.com/4fa8879ffc.css">
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
 </head>
